@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
 #
 
+2005-01-30 01:03:32 GMT	John Goerzen <jgoerzen@complete.org>	patch-11
+
+    Summary:
+      checkpointing
+    Revision:
+      missingexts--head--0.7--patch-11
+
+
+    modified files:
+     ChangeLog Python/Instances.hs
+
+
 2005-01-30 00:53:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-10
 
     Summary:
